--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-test",
+  "name": "test",
   "version": "1.0.0",
   "description": "Node Heroku host-test",
   "main": "app.js",
@@ -16,5 +16,13 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Divyalog/scim-connector.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Divyalog/scim-connector/issues"
+  },
+  "homepage": "https://github.com/Divyalog/scim-connector#readme"
 }
